# osc-ricochet-2

./: .gitignore  Cargo.toml  LICENSE  README.md  Road-To-Ricochet-2.md  mk_cert.sh  pre-build.sh  ricochet-headarches.json  ricochet-oapi-cli.json  ricochet-ssl.json  ricochet.json
.github/workflows/: cred-scan.yml  release.yml  test.yml
scripts/: oapi-cli-tests.sh  osc-cli-tests.sh  osc-sdk-c-tests.sh  osc-sdk-go-tests.sh  osc-sdk-java-tests.sh  osc-sdk-js-tests.sh  osc-sdk-python-tests.sh  osc-sdk-rust-tests.sh
src/: main.rs
