[package]
name = "ricochet-2"
version = "0.1.0"
authors = ["Matthias Gatto <matthias.gatto@outscale.com>"]
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.6"
futures = "0.3"
json = "0.12.4"
base64 = "0.21.0"
hmac = "0.12.1"
simple-hyper-server-tls = { version = "0.3.2", features = ["tls-rustls"]}
